# NEXUS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LOGIC_MAP.md  REFACTORING_REPORT.md  config.default.yml  config.example.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.sh  vercel.json
.github/workflows/: README.md  ci.yml  keepalive.yml  manual_deploy.yml
aura/: .dockerignore  .env.example  Dockerfile  README.md  components.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
aura/src/: FRONTEND_PHILOSOPHY.md
aura_legacy/: tailwind.config.js
docs/: Future_Roadmap.md  README.md  agentic_hardening.md  aura-nexus.md  aura_foundation.md  aura_tool.md  aura_websocket.md  config_service.md  llm_toolcall.md  memory.md  nexusbus.md  refactor_summary.md  services.md  session_id_localstorage.md  topics.md
docs/api_reference/: 00_INDEX.md  01_SSE_PROTOCOL.md  01_WEBSOCKET_PROTOCOL.md  02_CONFIGURATION_REFERENCE.md  03_REST_API.md
docs/developer_guides/: 00_INDEX.md  01_SETUP_AND_RUN.md  02_CONTRIBUTING_GUIDE.md  03_TESTING_STRATEGY.md  04_AI_COLLABORATION_CHARTER.md  05_DEPLOYMENT_GUIDE.md  REVIEW_PROTOCOL.md
docs/knowledge_base/: 00_INDEX.md  01_VISION_AND_PHILOSOPHY.md  02_NEXUS_ARCHITECTURE.md  03_AURA_ARCHITECTURE.md  04_CORE_CONCEPTS.md
docs/learn/: 2025-09-11-render-vite-ws-nginx.md  2025-09-12-llm-invalid-argument-tool-calls.md  2025-09-14-llm-function-response-name-empty.md  2025-09-15-chat-ai-state-transition-rendering.md  2025-10-06-render-canonization-refactor.md  README.md
docs/rules/: frontend_design_principles.md  responsive_design_system.md
docs/strategic_plans/: README.md
docs/tasks/: 25-1023_config_panel_ui.md  25-1024_mobile-responsive-design.md  25-1026_vercel-frontend-migration.md  25-1210_context-refactor.md  25-1210_python-toolchain-migration.md  25-1211_websocket-to-sse-migration.md  25-1218_memory-learning.md  25-1219_shared-memory-run-merging.md  README.md  ci_cd.md  command.md  command_panel.md  compenents_merge.md  configDB.md  docker.md  identity_database.md  key.md  light_theme.md  living_bubble.md  models.md  motion_system_migration_blueprint.md  render_deploy.md  restapi.md  test.md  tools.md  unit_test.md
nexus/: .dockerignore  Dockerfile  main.py
nexus/core/: __init__.py  auth.py  bus.py  models.py  topics.py
nexus/interfaces/: __init__.py  rest.py  sse.py  websocket.py
nexus/services/: command.py  config.py  context.py  identity.py  memory_learning.py  orchestrator.py  persistence.py  tool_executor.py
nexus/tools/: registry.py
scripts/: README.md  context_preview.py  database_manager.py  file_combiner.py  frontend_combined.txt  seed_config.py  xi_system_combined.txt
scripts/cloudflare-worker/: .gitignore  README.md  keepalive.js  package.json  wrangler.toml
scripts/shell/: run.sh  setup_aliases.sh
tests/: README.md  conftest.py
(+194 files in other folders)
