[tool.poetry]
name = "nexus"
version = "2.0.0"
description = "NEXUS AI Backend Engine"
authors = ["NEXUS Team"]
readme = "README.md"
packages = [{include = "nexus"}]

[tool.poetry.dependencies]
python = "^3.12"
# FastAPI and Uvicorn for web server
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
# Asynchronous task management
anyio = "^4.0.0"
# Data validation
pydantic = "^2.0.0"
# Configuration and .env loading
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
# MongoDB driver
pymongo = "^4.0.0"
# LLM Provider (OpenAI-compatible SDK)
openai = "^1.0.0"
# Web Search Tool
tavily-python = "^0.5.0"
# Cryptography for signature verification
eth-keys = "^0.6.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.0.0"
httpx = "^0.27.0"
# Linting and Formatting
ruff = "^0.8.0"
# Type Checking
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Ruff Configuration (Linting + Formatting)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
include = ["nexus/**/*.py", "tests/**/*.py"]
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "*.egg-info",
    "node_modules",
    "aura",
]

[tool.ruff.lint]
# Start with essential rules only, expand gradually
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function-call-in-default-argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["nexus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.12"
# Permissive mode - gradually tighten over time
warn_return_any = true
warn_unused_ignores = true
# Ignore missing stubs for third-party libraries
ignore_missing_imports = true
# Don't require all functions to have annotations (yet)
disallow_untyped_defs = false
# Check only nexus package
packages = ["nexus"]
# Exclude tests initially
exclude = ["tests/"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
